objects/JunoDoc__Juno_Sign_Transaction__c/JunoDoc__Juno_Sign_Transaction__c.object-meta.xml
<CustomObject>
    <label>JunoSign Transaction</label>
    <nameField>
        <displayFormat>JTN-{00000}</displayFormat>
        <label>JunoSign Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JunoSign Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>