objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__CC_Address__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__CC_Address__c</fullName>
    <label>CC Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>