objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Date_Completed__c</fullName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>