objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Date_Sent__c</fullName>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>