objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>