objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>