objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__Final_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Final_Document_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+JunoDoc__Final_Document_Id__c,JunoDoc__Final_Document_Id__c, &quot;_blank&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Document Link</label>
    <type>Text</type>
</CustomField>