objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Object_Id__c</fullName>
    <label>Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>