objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__Original_File_Id__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Original_File_Id__c</fullName>
    <label>Original File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>