objects/JunoDoc__Juno_Sign_Transaction__c/fields/JunoDoc__Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Sender_Email__c</fullName>
    <label>Sender Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>