objects/JunoDoc__Juno_Sign_Transaction__c/listViews/JunoDoc__All.listView-meta.xml
<ListView>
    <fullName>JunoDoc__All</fullName>
    <columns>NAME</columns>
    <columns>JunoDoc__Email_Subject__c</columns>
    <columns>JunoDoc__Sender_Email__c</columns>
    <columns>JunoDoc__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>